--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-SECRET_KEY=
+SECRET_KEY=sf#g&2g33z2v)ys9+)%u-#4thtzz8ri&hun-qvd2*8es@(8+c
 DEBUG=True
-DATABASE_URL=
+DATABASE_URL=postgresql://neondb_owner:npg_qpHTujaKi9P8@ep-polished-block-a2dajx0x.eu-central-1.aws.neon.tech/satin_mardi_mop_625471
