--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ charset-normalizer==3.4.4
 dj-database-url==3.1.0
 Django==6.0.1
 django-allauth==65.14.0
+gunicorn==23.0.0
 idna==3.11
+packaging==25.0
 pillow==12.1.0
 psycopg2-binary==2.9.11
 python-decouple==3.8
@@ -13,3 +15,4 @@ sqlparse==0.5.5
 stripe==14.2.0
 typing_extensions==4.15.0
 urllib3==2.6.3
+whitenoise==6.11.0
