--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 STRIPE_PUBLIC_KEY=your-stripe-public-key-here
 STRIPE_SECRET_KEY=your-stripe-secret-key-here
 STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret-here
+ALLOWED_HOSTS=127.0.0.1,localhost,your-heroku-app.herokuapp.com
