--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.11.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
+cloudinary==1.44.1
 dj-database-url==3.1.0
 Django==6.0.1
 django-allauth==65.14.0
+django-cloudinary-storage==0.3.0
 gunicorn==23.0.0
 idna==3.11
 packaging==25.0
@@ -11,6 +13,7 @@ pillow==12.1.0
 psycopg2-binary==2.9.11
 python-decouple==3.8
 requests==2.32.5
+six==1.17.0
 sqlparse==0.5.5
 stripe==14.2.0
 typing_extensions==4.15.0
